--- a/Pipfile
+++ b/Pipfile
@@ -3,8 +3,11 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [package]
-django="*"
-psycopg2="*"
+django= "*"
+gunicon = "*"
+django-heroku = "*"
+django-cors-headers = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.6.4"
