--- a/Pipfile
+++ b/Pipfile
@@ -3,8 +3,8 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [package]
-django= "*"
-gunicon = "*"
+django = "*"
+gunicorn = "*"
 django-heroku = "*"
 django-cors-headers = "*"
 dj-database-url = "*"
