--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ colorama==0.3.9
 constantly==15.1.0
 cryptography==2.2.2
 decorator==4.2.1
+dj-database-url==0.5.0
 Django==2.0.3
 django-environ==0.4.4
 Flask==0.12.2
+gunicorn==19.8.1
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
@@ -27,6 +29,7 @@ MarkupSafe==1.0
 parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
+pipenv==2018.5.18
 praw==5.4.0
 prawcore==0.14.0
 prompt-toolkit==1.0.15
@@ -51,7 +54,10 @@ txaio==2.10.0
 update-checker==0.16
 urllib3==1.22
 urwid==2.0.1
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
 watson-developer-cloud==1.3.5
 wcwidth==0.1.7
 Werkzeug==0.14.1
+whitenoise==3.3.1
 zope.interface==4.5.0
