--- a/Pipfile
+++ b/Pipfile
@@ -2,7 +2,7 @@
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 
-[package]
+[packages]
 django = "*"
 gunicorn = "*"
 django-heroku = "*"
