--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ gunicorn = "*"
 django-heroku = "*"
 django-cors-headers = "*"
 dj-database-url = "*"
+environ = "*"
 
 [requires]
 python_version = "3.6.4"
