--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ gunicorn = "*"
 django-heroku = "*"
 django-cors-headers = "*"
 dj-database-url = "*"
-environ = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.6.4"
