--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django-heroku = "*"
 django-cors-headers = "*"
 dj-database-url = "*"
 django-environ = "*"
+watson_developer_cloud = "*"
 
 [requires]
 python_version = "3.6.4"
